# flight-record

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  compose.yml  deploy.env
backend/: profiling_decorators.py  pyproject.toml  run.py
backend/airports/: __init__.py
backend/api/: __init__.py  credentials.toml  opensky.py  spokendata.py
backend/clustering/: __init__.py
backend/database/: __init__.py  models.py  session.py
backend/flask_app/: README.md  __init__.py
backend/flask_app/api/: api.py
backend/haversine/: __init__.py  distance.c
backend/threads/: __init__.py  opensky.py  spokendata.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  index.js
frontend/src/assets/css/: leaflet.css  main.css
frontend/src/assets/util/: airports.ts  flights.ts  types.ts  util.ts
frontend/src/components/: Map.tsx
frontend/src/components/airports/: Airports.tsx  icon.tsx  style.css
frontend/src/components/datetimepicker/: DateTimePicker.tsx
frontend/src/components/icons/: icons.tsx  style.css
frontend/src/components/info-panel/: InfoPanel.tsx  style.css
frontend/src/components/live-flight/: Flights.tsx  style.css
frontend/src/components/map-controll/: map-controll.tsx
frontend/src/components/markers/: RotatedMarker.tsx
frontend/src/components/navbar/: NavBar.tsx
frontend/src/components/polyline/: CustomPolyline.tsx  style.css
frontend/src/pages/home/: Home.tsx  (+1 more)
frontend/src/values/: colors.tsx
scripts/: create-venv.sh  install-deps.sh  install-python.sh
(+4 files in other folders)
